--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <h2>Cause-Effect Dataset Viewer</h2>
+  <h2>Context Dependent Data Pairs</h2>
 
   <p>This page lists context dependent TU data pairs with their data files, description files, and scatter plots (PDF).</p>
 
