--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
       <td><a href="data/pair0053_des.txt">pair0053_des.txt</a></td>
       <td><a href="data/pair0053.pdf">pair0053.pdf</a></td>
     </tr>
+     <tr>
+      <td><a href="data/pair0065.txt">pair0065.txt</a></td>
+      <td><a href="data/pair0065_des.txt">pair0065_des.txt</a></td>
+      <td><a href="data/pair0065.pdf">pair0065.pdf</a></td>
+    </tr>
+     <tr>
+      <td><a href="data/pair0066.txt">pair0066.txt</a></td>
+      <td><a href="data/pair0066_des.txt">pair0066_des.txt</a></td>
+      <td><a href="data/pair0066.pdf">pair0066.pdf</a></td>
+    </tr>
+     <tr>
+      <td><a href="data/pair0067.txt">pair0067.txt</a></td>
+      <td><a href="data/pair0067_des.txt">pair0067_des.txt</a></td>
+      <td><a href="data/pair0067.pdf">pair0067.pdf</a></td>
+    </tr>
   </table>
 
 </body>
