--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <tr>
       <td><a href="data/pair0049.txt">pair0049.txt</a></td>
       <td><a href="data/pair0049_des.txt">pair0049_des.txt</a></td>
-      <td><a href="data/pair0049.pdf">pair0049.pdf</a></td>
+      <td>
+       <a href="data/pair0049_1.pdf">pair0049_1.pdf</a><br>
+       <a href="data/pair0049_2.pdf">pair0049_2.pdf</a>
+      </td>
     </tr>
     <tr>
       <td><a href="data/pair0050.txt">pair0050.txt</a></td>
