--- a/index.html
+++ b/index.html
@@ -33,32 +33,50 @@
     <tr>
       <td><a href="data/pair0050.txt">pair0050.txt</a></td>
       <td><a href="data/pair0050_des.txt">pair0050_des.txt</a></td>
-      <td><a href="data/pair0050.pdf">pair0050.pdf</a></td>
+      <td>
+       <a href="data/pair50_1.pdf">pair50_1.pdf</a><br>
+       <a href="data/pair50_2.pdf">pair50_2.pdf</a>
+      </td>
     </tr>
     <tr>
       <td><a href="data/pair0051.txt">pair0051.txt</a></td>
       <td><a href="data/pair0051_des.txt">pair0051_des.txt</a></td>
-      <td><a href="data/pair0051.pdf">pair0051.pdf</a></td>
+      <td>
+       <a href="data/pair51_1.pdf">pair51_1.pdf</a><br>
+       <a href="data/pair51_2.pdf">pair51_2.pdf</a>
+      </td>
     </tr>
     <tr>
       <td><a href="data/pair0053.txt">pair0053.txt</a></td>
       <td><a href="data/pair0053_des.txt">pair0053_des.txt</a></td>
-      <td><a href="data/pair0053.pdf">pair0053.pdf</a></td>
+      <td>
+       <a href="data/pair53_1.pdf">pair53_1.pdf</a><br>
+       <a href="data/pair53_2.pdf">pair53_2.pdf</a>
+      </td>
     </tr>
      <tr>
       <td><a href="data/pair0065.txt">pair0065.txt</a></td>
       <td><a href="data/pair0065_des.txt">pair0065_des.txt</a></td>
-      <td><a href="data/pair0065.pdf">pair0065.pdf</a></td>
+      <td>
+       <a href="data/pair65_1.pdf">pair65_1.pdf</a><br>
+       <a href="data/pair65_2.pdf">pair65_2.pdf</a>
+      </td>
     </tr>
      <tr>
       <td><a href="data/pair0066.txt">pair0066.txt</a></td>
       <td><a href="data/pair0066_des.txt">pair0066_des.txt</a></td>
-      <td><a href="data/pair0066.pdf">pair0066.pdf</a></td>
+      <td>
+       <a href="data/pair66_1.pdf">pair66_1.pdf</a><br>
+       <a href="data/pair66_2.pdf">pair66_2.pdf</a>
+      </td>
     </tr>
      <tr>
       <td><a href="data/pair0067.txt">pair0067.txt</a></td>
       <td><a href="data/pair0067_des.txt">pair0067_des.txt</a></td>
-      <td><a href="data/pair0067.pdf">pair0067.pdf</a></td>
+      <td>
+       <a href="data/pair67_1.pdf">pair67_1.pdf</a><br>
+       <a href="data/pair67_2.pdf">pair67_2.pdf</a>
+      </td>
     </tr>
   </table>
 
