--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <tr>
       <th>Data</th>
       <th>Description</th>
-      <th>Scatter plot (PDF)</th>
+      <th>Scatter plot</th>
+      <th>Switching Points</th>
+      <th>Supporting Papers</th>
     </tr>
     <tr>
       <td><a href="data/pair0049.txt">pair0049.txt</a></td>
@@ -29,6 +31,8 @@
        <a href="data/pair49_1.pdf">pair49_1</a><br>
        <a href="data/pair49_2.pdf">pair49_2</a>
       </td>
+      <td> <a href="">Switch</a></td>
+      <td><a href="">paper</a></td>
     </tr>
     <tr>
       <td><a href="data/pair0050.txt">pair0050.txt</a></td>
