--- a/index.html
+++ b/index.html
@@ -20,19 +20,24 @@
     <tr>
       <th>Data</th>
       <th>Description</th>
-      <th>Scatter plot</th>
-      <th>Switching Points</th>
+      <th>Scatter Plot</th>
+      <th>Switch Points Analysis</th>
       <th>Supporting Papers</th>
     </tr>
     <tr>
       <td><a href="data/pair0049.txt">pair0049.txt</a></td>
       <td><a href="data/pair0049_des.txt">pair0049_des.txt</a></td>
       <td>
-       <a href="data/pair49_1.pdf">pair49_1</a><br>
-       <a href="data/pair49_2.pdf">pair49_2</a>
+       <a href="data/pair49_1.pdf">Original Plot</a><br>
+       <a href="data/pair49_2.pdf">Normalized Plot</a>
       </td>
-      <td> <a href="">Switch</a></td>
-      <td><a href="">paper</a></td>
+      <td> 
+        <a href="data/pair49_1_sp.pdf">Switch Analysis (Original)</a><br>
+        <a href="data/pair49_2_sp.pdf">Switch Analysis (Normalized)</a>
+      </td>
+      <td>
+        <a href="https://doi.org/10.1029/2008JD009829" target="_blank">DOI:10.1029/2008JD009829</a>
+      </td>
     </tr>
     <tr>
       <td><a href="data/pair0050.txt">pair0050.txt</a></td>
