--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@
 </div>
 <div style="text-align: justify; max-width: 1400px; margin: 0 auto;">
 
-  <h2> Time Dependent Data Pairs (Synthetic )</h2>
+  <h2>Synthetic</h2>
+
+  <h2> Time Dependent Data Pairs</h2>
   <table>
     <colgroup>
       <col style="width:1%;">
@@ -397,7 +399,7 @@
 
 <div style="text-align: justify; max-width: 1400px; margin: 0 auto;">
 
-  <h2> Temperature Dependent Data Pairs (Synthetic )</h2>
+  <h2> Temperature Dependent Data Pairs</h2>
   <table>
     <colgroup>
       <col style="width:1%;">
@@ -477,6 +479,68 @@
       </td>
       <td>
         <a class="sub-link" href="data/pair10_2.pdf">pair10_2</a>
+      </td>
+    </tr>
+
+  </table>
+</div>
+
+<div style="text-align: justify; max-width: 1400px; margin: 0 auto;">
+
+  <h2> Latitude Dependent Data Pairs</h2>
+  <table>
+    <colgroup>
+      <col style="width:1%;">
+      <col style="width:10%;">
+      <col style="width:10%;">
+      <col style="width:10%;">
+      <col style="width:10%;">
+    </colgroup>
+
+    <tr>  
+      <th>Sr. No</th>
+      <th>Data</th>
+      <th>Description</th>
+      <th>Scatter Plot (Original)</th>
+      <th>Switch Points</th>
+    </tr>
+
+    <!-- Pair 11 Row  -->
+    <tr>
+      <td>1</td>
+      <td><a href="data/pair11.txt">pair11.txt</a></td>
+      <td><a href="data/pair11_des.txt">pair11_des.txt</a></td>
+      <td>
+        <a class="sub-link" href="data/pair11_1.pdf">pair11_1</a>
+      </td>
+      <td>
+        <a class="sub-link" href="data/pair11_2.pdf">pair11_2</a>
+      </td>
+    </tr>
+
+    <!-- Pair 12 Row  -->
+    <tr>
+      <td>2</td>
+      <td><a href="data/pair12.txt">pair12.txt</a></td>
+      <td><a href="data/pair12_des.txt">pair12_des.txt</a></td>
+      <td>
+        <a class="sub-link" href="data/pair12_1.pdf">pair12_1</a>
+      </td>
+      <td>
+        <a class="sub-link" href="data/pair12_2.pdf">pair12_2</a>
+      </td>
+    </tr>
+
+    <!-- Pair 013 Row  -->
+    <tr>
+      <td>3</td>
+      <td><a href="data/pair13.txt">pair13.txt</a></td>
+      <td><a href="data/pair13_des.txt">pair13_des.txt</a></td>
+      <td>
+        <a class="sub-link" href="data/pair13_1.pdf">pair13_1</a>
+      </td>
+      <td>
+        <a class="sub-link" href="data/pair13_2.pdf">pair13_2</a>
       </td>
     </tr>
 
