--- a/index.html
+++ b/index.html
@@ -83,14 +83,15 @@
 <table>
     <colgroup>
       <col style="width:1%;">
-      <col style="width:10%;">
-      <col style="width:10%;">
-      <col style="width:5%;">
+      <col style="width:9%;">
+      <col style="width:9%;">
+      <col style="width:4%;">
       <col style="width:7%;">
       <col style="width:7%;">
       <col style="width:7%;">
       <col style="width:7%;">
-      <col style="width:45%;"> 
+      <col style="width:9%;">
+      <col style="width:40%;"> 
     </colgroup>
 
     <tr>  
@@ -102,6 +103,7 @@
       <th>Description</th>
       <th>Scatter Plot (Original)</th>
       <th>Scatter Plot (Normalized)</th>
+      <th>Switch Points</th>
       <th>Supporting Papers for Ground Truth</th>
     </tr>
 
@@ -119,6 +121,7 @@
       <td>
         <a class="sub-link" href="data/pair49_2.pdf">pair49_2</a>
       </td>
+      <td>~7°C, ~18°C</td>
       <td class="supporting-papers">
         <div><a href="https://doi.org/10.1029/2005JD006348" >Role of tropospheric ozone increases in 20th-century climate change </a></div>
         <div><a href="https://www.sciencedirect.com/science/article/abs/pii/S0019103517307820?via%3Dihub" >A planet with higher ozone concentration is warmer than one without it.</a></div>      
@@ -140,6 +143,7 @@
       <td>
        <a class="sub-link" href="data/pair50_2.pdf" >pair50_2</a>
       </td>
+      <td>~2°C, ~12°C</td>
       <td class="supporting-papers">
         <div><a href="https://www.giss.nasa.gov/research/features/archive/200402_tango/" >Ozone affects climate, and climate affects ozone</a></div>
         <div><a href="https://www.nsf.gov/news/ozone-may-be-heating-planet-more-we-realize" >Ozone may be heating the planet more than we realize</a></div>
@@ -160,6 +164,7 @@
       <td>       
         <a class="sub-link" href="data/pair51_2.pdf" >pair51_2</a>
       </td>
+      <td>~5°C, ~10°C</td>
       <td class="supporting-papers">
         <div><a href="https://en.wikipedia.org/wiki/Ground-level_ozone" >Ozone in the troposphere contributes to global warming</a></div>
         <div><a href="https://doi.org/10.1029/2008JD009829" >A 15% increase in ozone in the upper troposphere has a strong warming effect, while changes in lower levels have little impact.</a></div>
@@ -184,6 +189,7 @@
         <a class="sub-link" href="data/pair53_2.2.pdf" >pair53_2.2</a>
         <a class="sub-link" href="data/pair53_2.3.pdf" >pair53_2.3</a>
       </td>
+      <td> ~37°C</td>
       <td class="supporting-papers">
         
         <div><a href="https://arxiv.org/pdf/2404.17972" >Ozone changes temperature and wind patterns, suggesting it plays a role in shaping the climate.</a></div>
@@ -207,6 +213,7 @@
       <td>
         <a class="sub-link" href="data/pair65_2.pdf">pair65_2</a>
       </td>
+      <td>~-0.02</td>
       <td class="supporting-papers">
         <div><a href="https://arxiv.org/abs/2303.07244">The Stock Price Relationship between Holding Companies and Subsidiaries</a></div>
       </td>
@@ -226,6 +233,7 @@
       <td>
       <a class="sub-link" href="data/pair66_2.pdf">pair66_2</a>
       </td>
+      <td>~-0.05</td>
       <td class="supporting-papers">
         <div><a href="https://arxiv.org/abs/2303.07244">The Stock Price Relationship between Holding Companies and Subsidiaries</a></div>
       </td>
@@ -245,6 +253,7 @@
       <td>
       <a class="sub-link" href="data/pair67_2.pdf">pair67_2</a>
       </td>
+      <td>~-0.03</td>
       <td class="supporting-papers">
         <div><a href="https://arxiv.org/abs/2303.07244">The Stock Price Relationship between Holding Companies and Subsidiaries</a></div>
       </td>
@@ -264,6 +273,7 @@
       <td>
         <a class="sub-link" href="data/pair73_2.pdf">pair73_2</a>
       </td>
+      <td>~15, ~30</td>
       <td class="supporting-papers">
         <div><a href="https://www.sciencedirect.com/science/article/pii/S2352484719305517?via%3Dihub" target="_blank">Relationship between energy consumption, CO2 emission and economic growth in ASEAN: Cointegration and causality model</a></div>
       </td>
@@ -283,6 +293,7 @@
       <td>
         <a class="sub-link" href="data/pair001_2.pdf">pair01_2</a>
       </td>
+      <td>~125°, ~200°C</td>
       <td class="supporting-papers">
         <div><a href="https://www.sciencedirect.com/science/article/abs/pii/S0266892024000638" target="_blank">Wind direction can affect wind speed, especially during storms or weather changes.</a></div>
       </td>
@@ -301,6 +312,7 @@
       <td>
         <a class="sub-link" href="data/pair002_2.pdf">pair02_2</a>
       </td>
+      <td>~50°, ~210°C</td>
       <td class="supporting-papers">
         <div><a href="https://www.sciencedirect.com/science/article/pii/S2950338824000238" target="_blank">At higher altitudes, wind direction shifts from northeast to east-northeast, and wind speed rises.</a></div>
       </td>
@@ -308,10 +320,9 @@
   </table>
 </div>
 <div style="text-align: justify; max-width: 1400px; margin: 0 auto;">
-
-  <h2>Synthetic</h2>
-
-  <h2> Time Dependent Data Pairs</h2>
+  <h2>Time Dependent Data Pairs</h2>
+  <p style="text-align: center">
+  For detailed information about the datasets and usage instructions, see the <a href="data/Readme_t.txt">README</a>.</p>
   <table>
     <colgroup>
       <col style="width:1%;">
@@ -325,13 +336,13 @@
       <th>Sr. No</th>
       <th>Data</th>
       <th>Description</th>
-      <th>Scatter Plot (Original)</th>
+      <th>Scatter Plot</th>
       <th>Switch Points</th>
     </tr>
 
     <!-- Pair 01 Row  -->
     <tr>
-      <td>1</td>
+      <td>11</td>
       <td><a href="data/pair01.txt">pair01.txt</a></td>
       <td><a href="data/pair01_des.txt">pair01_des.txt</a></td>
       <td>
@@ -344,7 +355,7 @@
 
     <!-- Pair 02 Row  -->
     <tr>
-      <td>2</td>
+      <td>12</td>
       <td><a href="data/pair02.txt">pair02.txt</a></td>
       <td><a href="data/pair02_des.txt">pair02_des.txt</a></td>
       <td>
@@ -357,7 +368,7 @@
 
     <!-- Pair 03 Row  -->
     <tr>
-      <td>3</td>
+      <td>13</td>
       <td><a href="data/pair03.txt">pair03.txt</a></td>
       <td><a href="data/pair03_des.txt">pair03_des.txt</a></td>
       <td>
@@ -370,7 +381,7 @@
 
     <!-- Pair 04 Row  -->
     <tr>
-      <td>4</td>
+      <td>14</td>
       <td><a href="data/pair04.txt">pair04.txt</a></td>
       <td><a href="data/pair04_des.txt">pair04_des.txt</a></td>
       <td>
@@ -383,7 +394,7 @@
 
     <!-- Pair 05 Row  -->
     <tr>
-      <td>5</td>
+      <td>15</td>
       <td><a href="data/pair05.txt">pair05.txt</a></td>
       <td><a href="data/pair05_des.txt">pair05_des.txt</a></td>
       <td>
@@ -391,6 +402,45 @@
       </td>
       <td>
         <a class="sub-link" href="data/pair05_2.pdf">pair05_2</a>
+      </td>
+    </tr>
+
+    <!-- Pair 06 Row  -->
+    <tr>
+      <td>16</td>
+      <td><a href="data/pair06.txt">pair06.txt</a></td>
+      <td><a href="data/pair06_des.txt">pair06_des.txt</a></td>
+      <td>
+        <a class="sub-link" href="data/pair06_1.pdf">pair06_1</a>
+      </td>
+      <td>
+        <a class="sub-link" href="data/pair06_2.pdf">pair06_2</a>
+      </td>
+    </tr>
+
+    <!-- Pair 07 Row  -->
+    <tr>
+      <td>17</td>
+      <td><a href="data/pair07.txt">pair07.txt</a></td>
+      <td><a href="data/pair07_des.txt">pair07_des.txt</a></td>
+      <td>
+        <a class="sub-link" href="data/pair07_1.pdf">pair07_1</a>
+      </td>
+      <td>
+        <a class="sub-link" href="data/pair07_2.pdf">pair07_2</a>
+      </td>
+    </tr>
+
+    <!-- Pair 08 Row  -->
+    <tr>
+      <td>18</td>
+      <td><a href="data/pair08.txt">pair08.txt</a></td>
+      <td><a href="data/pair08_des.txt">pair08_des.txt</a></td>
+      <td>
+        <a class="sub-link" href="data/pair08_1.pdf">pair08_1</a>
+      </td>
+      <td>
+        <a class="sub-link" href="data/pair08_2.pdf">pair08_2</a>
       </td>
     </tr>
 
@@ -417,48 +467,9 @@
       <th>Switch Points</th>
     </tr>
 
-    <!-- Pair 06 Row  -->
-    <tr>
-      <td>1</td>
-      <td><a href="data/pair06.txt">pair06.txt</a></td>
-      <td><a href="data/pair06_des.txt">pair06_des.txt</a></td>
-      <td>
-        <a class="sub-link" href="data/pair06_1.pdf">pair06_1</a>
-      </td>
-      <td>
-        <a class="sub-link" href="data/pair06_2.pdf">pair06_2</a>
-      </td>
-    </tr>
-
-    <!-- Pair 07 Row  -->
-    <tr>
-      <td>2</td>
-      <td><a href="data/pair07.txt">pair07.txt</a></td>
-      <td><a href="data/pair07_des.txt">pair07_des.txt</a></td>
-      <td>
-        <a class="sub-link" href="data/pair07_1.pdf">pair07_1</a>
-      </td>
-      <td>
-        <a class="sub-link" href="data/pair07_2.pdf">pair07_2</a>
-      </td>
-    </tr>
-
-    <!-- Pair 08 Row  -->
-    <tr>
-      <td>3</td>
-      <td><a href="data/pair08.txt">pair08.txt</a></td>
-      <td><a href="data/pair08_des.txt">pair08_des.txt</a></td>
-      <td>
-        <a class="sub-link" href="data/pair08_1.pdf">pair08_1</a>
-      </td>
-      <td>
-        <a class="sub-link" href="data/pair08_2.pdf">pair08_2</a>
-      </td>
-    </tr>
-
     <!-- Pair 09 Row  -->
     <tr>
-      <td>4</td>
+      <td>19</td>
       <td><a href="data/pair09.txt">pair09.txt</a></td>
       <td><a href="data/pair09_des.txt">pair09_des.txt</a></td>
       <td>
@@ -471,14 +482,40 @@
 
     <!-- Pair 10 Row  -->
     <tr>
-      <td>5</td>
+      <td>20</td>
       <td><a href="data/pair10.txt">pair10.txt</a></td>
       <td><a href="data/pair10_des.txt">pair10_des.txt</a></td>
       <td>
-        <a class="sub-link" href="data/pair10_1.pdf">pair10_1</a>
+        <a class="sub-link" href="data/pair08_1.pdf">pair10_1</a>
       </td>
       <td>
         <a class="sub-link" href="data/pair10_2.pdf">pair10_2</a>
+      </td>
+    </tr>
+
+    <!-- Pair 11 Row  -->
+    <tr>
+      <td>21</td>
+      <td><a href="data/pair11.txt">pair11.txt</a></td>
+      <td><a href="data/pair11_des.txt">pair11_des.txt</a></td>
+      <td>
+        <a class="sub-link" href="data/pair11_1.pdf">pair11_1</a>
+      </td>
+      <td>
+        <a class="sub-link" href="data/pair11_2.pdf">pair11_2</a>
+      </td>
+    </tr>
+
+    <!-- Pair 12 Row  -->
+    <tr>
+      <td>22</td>
+      <td><a href="data/pair12.txt">pair12.txt</a></td>
+      <td><a href="data/pair12_des.txt">pair12_des.txt</a></td>
+      <td>
+        <a class="sub-link" href="data/pair12_1.pdf">pair12_1</a>
+      </td>
+      <td>
+        <a class="sub-link" href="data/pair12_2.pdf">pair12_2</a>
       </td>
     </tr>
 
@@ -507,7 +544,7 @@
 
     <!-- Pair 11 Row  -->
     <tr>
-      <td>1</td>
+      <td>21</td>
       <td><a href="data/pair11.txt">pair11.txt</a></td>
       <td><a href="data/pair11_des.txt">pair11_des.txt</a></td>
       <td>
@@ -520,7 +557,7 @@
 
     <!-- Pair 12 Row  -->
     <tr>
-      <td>2</td>
+      <td>22</td>
       <td><a href="data/pair12.txt">pair12.txt</a></td>
       <td><a href="data/pair12_des.txt">pair12_des.txt</a></td>
       <td>
@@ -533,7 +570,7 @@
 
     <!-- Pair 013 Row  -->
     <tr>
-      <td>3</td>
+      <td>23</td>
       <td><a href="data/pair13.txt">pair13.txt</a></td>
       <td><a href="data/pair13_des.txt">pair13_des.txt</a></td>
       <td>
