--- a/comparison.html
+++ b/comparison.html
@@ -56,11 +56,6 @@ We analyzed scatterplots of variable pairs with <strong>multimodal pattern</stro
 We applied two simple, non-parametric techniques: <strong>binning and averaging</strong>, which divides the X-axis into equal-width segments to highlight <em>nonlinear fluctuations</em> and <strong>LOESS smoothing</strong> (Locally Estimated Scatterplot Smoothing), which fits local regression curves to detect <em>changes in slope</em>, indicating possible switches (<code>frac = 0.1–0.4</code>, tested over 10 iterations).
 </p>
 
-<p style="text-align: justify;">
-Switch Points are cross-valided using the PELT method from the ruptures library. 
-For <strong>pairs 49–51</strong>, we identified temperature possibly responsible for the observed switches.
-</p>
-
 
   <div class="container">
     <table>
@@ -187,7 +182,7 @@ For <strong>pairs 49–51</strong>, we identified temperature possibly responsib
         <td>—</td>
         <td>&gt; −0.05</td>
         <td>Stable at frac=0.2 and bin_size=9</td>
-        <td>Suggests steady positive co-movement with minimal nonlinear trend</td>
+        <td>Suggests steady positive co-movement</td>
         <td><a href="data/pair66_sp.pdf" target="_blank">View</a> Ownership_structure/Market perception</td>
     </tr>
 
