--- a/index.html
+++ b/index.html
@@ -321,8 +321,7 @@
 </div>
 <div style="text-align: justify; max-width: 1400px; margin: 0 auto;">
   <h2>Time Dependent Data Pairs</h2>
-  <p style="text-align: center">
-  For detailed information about the datasets and usage instructions, see the <a href="data/Readme_t.txt">README</a>.</p>
+  
   <table>
     <colgroup>
       <col style="width:1%;">
@@ -505,7 +504,6 @@
         <a class="sub-link" href="data/pair11_2.pdf">pair11_2</a>
       </td>
     </tr>
-
     
 
   </table>
@@ -584,6 +582,14 @@
     </tr>
 
   </table>
+
+  <p style="text-align: center">
+  Further details regarding the specific data generation process, parameters, and causal shifts can be seen here 
+  <a href="data/meta_time.txt">Time-Dependent</a> 
+  and 
+  <a href="data/meta_temp">Temperature-Dependent</a>.
+</p>
+
 </div>
 </body>
 </html>
