--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
       <th>Sr. No</th>
       <th>Data</th>
       <th>Description</th>
-      <th>Scatter Plot (Original)</th>
+      <th>Scatter Plot</th>
       <th>Switch Points</th>
     </tr>
 
@@ -525,7 +525,7 @@
       <th>Sr. No</th>
       <th>Data</th>
       <th>Description</th>
-      <th>Scatter Plot (Original)</th>
+      <th>Scatter Plot</th>
       <th>Switch Points</th>
     </tr>
 
@@ -555,31 +555,7 @@
       </td>
     </tr>
 
-    <!-- Pair 12 Row  -->
-    <tr>
-      <td>22</td>
-      <td><a href="data/pair12.txt">pair12.txt</a></td>
-      <td><a href="data/pair12_des.txt">pair12_des.txt</a></td>
-      <td>
-        <a class="sub-link" href="data/pair12_1.pdf">pair12_1</a>
-      </td>
-      <td>
-        <a class="sub-link" href="data/pair12_2.pdf">pair12_2</a>
-      </td>
-    </tr>
-
-    <!-- Pair 013 Row  -->
-    <tr>
-      <td>23</td>
-      <td><a href="data/pair13.txt">pair13.txt</a></td>
-      <td><a href="data/pair13_des.txt">pair13_des.txt</a></td>
-      <td>
-        <a class="sub-link" href="data/pair13_1.pdf">pair13_1</a>
-      </td>
-      <td>
-        <a class="sub-link" href="data/pair13_2.pdf">pair13_2</a>
-      </td>
-    </tr>
+  
 
   </table>
 
@@ -587,7 +563,7 @@
   Further details regarding the specific data generation process, parameters, and causal shifts can be seen here 
   <a href="data/meta_time.txt">Time-Dependent</a> 
   and 
-  <a href="data/meta_temp">Temperature-Dependent</a>.
+  <a href="data/meta_temp.txt">Temperature-Dependent</a>.
 </p>
 
 </div>
